@@ -1,4 +1,4 @@
-# ![image-20210810002945667](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20210810002945667.png)Java多线程编程
+![image-20210810002945667](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20210810002945667.png)Java多线程编程
 
 - 线程的基本用法
 - 线程池
@@ -2003,7 +2003,7 @@ Integer 8+4 字节
 
 64 位虚拟机 Mark Word
 
-<img src="..\pics\JavaStrengthen\juc\64_mark_word.png" style="width:80%; float:left">
+<img src="..\pics\JavaStrengthen\juc\64_mark_word.png" style="float:left">
 
 ==参考资料：== <a href="https://stackoverflow.com/questions/26357186/what-is-in-java-object-header">资料</a>
 
@@ -2036,6 +2036,8 @@ Monitor 结构如下：
 - 不加 synchronized  的对象不会关联监视器，不遵从以上规则。
 
 ### synchronized 原理
+
+- monitorenter  将 lock对象 MarkWord 置为 Monitor 指针
 
 ```java
 public static void main(String[] args) {
@@ -2088,7 +2090,390 @@ public static void main(java.lang.String[]);
 - 通过异常 **try-catch 机制**，确保一定会被解锁
 - 方法级别的 synchronized 不会在字节码指令中有所体现
 
+### 小故事
+
+- 老王 - JVM 
+- 小南 - 线程 
+- 小女 - 线程 
+- 房间 - 对象 
+- 房间门上 - 防盗锁 - Monitor 
+- 房间门上 - 小南书包 - 轻量级锁 
+- 房间门上 - 刻上小南大名 - 偏向锁 
+- 批量重刻名 - 一个类的偏向锁撤销到达 20 阈值 
+- 不能刻名字 - 批量撤销该类对象的偏向锁，设置该类不可偏向
+
+小南要使用房间保证计算不被其它人干扰（原子性），最初，他用的是防盗锁，当上下文切换时，锁住门。这样， 即使他离开了，别人也进不了门，他的工作就是安全的。
+
+但是，很多情况下没人跟他来竞争房间的使用权。小女是要用房间，但使用的时间上是错开的，小南白天用，小女 晚上用。每次上锁太麻烦了，有没有更简单的办法呢？
+
+小南和小女商量了一下，约定不锁门了，而是谁用房间，谁把自己的书包挂在门口，但他们的书包样式都一样，因 此每次进门前得翻翻书包，看课本是谁的，如果是自己的，那么就可以进门，这样省的上锁解锁了。万一书包不是 自己的，那么就在门外等，并通知对方下次用锁门的方式。
+
+后来，小女回老家了，很长一段时间都不会用这个房间。小南每次还是挂书包，翻书包，虽然比锁门省事了，但仍 然觉得麻烦。
+
+于是，小南干脆在门上刻上了自己的名字：【小南专属房间，其它人勿用】，下次来用房间时，只要名字还在，那 么说明没人打扰，还是可以安全地使用房间。如果这期间有其它人要用这个房间，那么由使用者将小南刻的名字擦 掉，升级为挂书包的方式。
+
+同学们都放假回老家了，小南就膨胀了，在 20 个房间刻上了自己的名字，想进哪个进哪个。后来他自己放假回老 家了，这时小女回来了（她也要用这些房间），结果就是得一个个地擦掉小南刻的名字，升级为挂书包的方式。老 王觉得这成本有点高，提出了一种批量重刻名的方法，他让小女不用挂书包了，可以直接在门上刻上自己的名字
+
+后来，刻名的现象越来越频繁，老王受不了了：算了，这些房间都不能刻名了，只能挂书包
+
+### synchronized 原理进阶
+
+#### 轻量级锁
+
+轻量级锁的使用场景：如果一个对象虽然有多线程要加锁，但加锁的时间是错开的（也就是没有竞争），那么可以 使用轻量级锁来优化。
+
+轻量级锁对使用者是透明的，即语法仍然是 synchronized
+
+假设有两个方法同步块，利用同一个对象加锁
+
+```java
+static final Object obj = new Object();
+
+public static void method1() {
+    synchronized (obj) {
+        // 同步块 A
+        method2();
+    }
+}
+
+public static void method2() {
+    synchronized (obj) {
+        // 同步块 B
+    }
+}
+```
+
+- 创建锁记录（Lock Record）对象，每个线程都的栈帧都会包含一个锁记录【JVM层面的】的结构，内部可以存储锁定对象的 Mark Word。
+  - <span style="color:green">**lock record**</span>记录要加锁对象的 markword，便于后面还原
+  - Object reference 对象指针
+
+<img src="..\pics\JavaStrengthen\juc\thread_frame_lock.png">
+
+- 让锁记录中 Object reference 指向锁对象，并尝试用 cas（原子性操作） 替换 Object 的 mark word，将 mark word 的值存入锁记录。【00代表轻量级锁】
+  - 如果是 00 <--> 01 则交换会成功
+
+<img src="..\pics\JavaStrengthen\juc\thread_frame_lock2.png">
+
+- 如果 cas 替换成功，对象头中存储了锁记录地址和状态 00，表示由该线程给对象加锁，这时图示如下：
+
+<img src="..\pics\JavaStrengthen\juc\thread_frame_lock3.png">
+
+- 如果 cas 失败，有两种情况
+  - 如果是其他线程已经持有了该 Object 的轻量级锁，这时表明有竞争，进入锁膨胀过程。
+  - 如果是自己指向了 synchronized 锁重入，那么再添加一条 Lock Record 作为重入的计数。
+
+第二个方法调用，也加锁，Object reference 指向 Object，但是 cas 失败了，因为锁已经被持有的，但是这种失败没事，因为发现是同一个线程操作的，没有问题！
+
+<img src="..\pics\JavaStrengthen\juc\thread_frame_lock4.png">
+
+- 当退出 synchronized 代码块（解锁是）如果有取值为 null 的锁记录，表示有重入，这时重置锁记录，表示重入计数减一。
+
+<img src="..\pics\JavaStrengthen\juc\thread_frame_lock5.png">
+
+- 当退出 synchronized 代码块（解锁时）锁记录的值不为 null，这时使用 cas 将 Mark Word 的值恢复给对象头 
+  - 成功，则解锁成功 
+  - 失败，说明轻量级锁进行了锁膨胀或已经升级为重量级锁，进入重量级锁解锁流程
+
+#### 锁膨胀
+
+如果在尝试加轻量级锁的过程种，CAS 操作无法成功，这时一种情况就是有其他线程为此对象加上了轻量级锁（有竞争），这时需要进行锁膨胀，将轻量级锁变成重量级锁。
+
+```java
+static Object obj = new Object();
+public static void method1(){
+    synchronized(obj){
+        // 同步块
+    }
+}
+```
+
+- 当 Thread-1 进行轻量级加锁时，Thread-0 已经对该对象加了轻量级锁
+
+<img src="..\pics\JavaStrengthen\juc\swell_1.png">
+
+- 这时 Thread-1 加轻量级锁失败，进入锁膨胀流程 
+  - 即为 Object 对象申请 Monitor 锁，让 Object 指向重量级锁地址 
+  - 然后自己进入 Monitor 的 EntryList BLOCKED
+
+<img src="..\pics\JavaStrengthen\juc\swell_2.png">
+
+- 当 Thread-0 退出同步块解锁时，使用 cas 将 Mark Word 的值恢复给对象头，失败。这时会进入重量级解锁 流程，即按照 Monitor 地址找到 Monitor 对象，设置 Owner 为 null，唤醒 EntryList 中 BLOCKED 线程
+
+#### 自旋优化
+
+重量级锁竞争的时候，还可以使用自旋来进行优化，如果当前线程自旋成功（即这时候持锁线程已经退出了同步 块，释放了锁），**这时当前线程就可以避免阻塞**。 【暂时不阻塞，进行几次循环】
+
+> 自旋重试成功的情况
+
+| 线程1（core1上）         | 对象 Mark              | 线程2（core2上）         |
+| ------------------------ | ---------------------- | ------------------------ |
+| \-                       | 10（重量锁）           | -                        |
+| 访问同步块，获取 monitor | 10（重量锁）重量锁指针 | -                        |
+| 成功（加锁）             | 10（重量锁）重量锁指针 | -                        |
+| 执行同步块               | 10（重量锁）重量锁指针 | -                        |
+| 执行同步块               | 10（重量锁）重量锁指针 | 访问同步块，获取 monitor |
+| 执行同步块               | 10（重量锁）重量锁指针 | 自旋重试                 |
+| 执行完毕                 | 10（重量锁）重量锁指针 | 自旋重试                 |
+| 成功（解锁）             | 01（无锁）             | 自旋重试                 |
+| -                        | 10（重量锁）重量锁指针 | 成功（加锁）             |
+| -                        | 10（重量锁）重量锁指针 | 执行同步块               |
+| ...                      | ...                    | ...                      |
+
+> 自旋重试失败的情况
+
+| 线程1（core1上）         | 对象 Mark              | 线程2（core2上）         |
+| ------------------------ | ---------------------- | ------------------------ |
+| \-                       | 10（重量锁）           | -                        |
+| 访问同步块，获取 monitor | 10（重量锁）重量锁指针 | -                        |
+| 成功（加锁）             | 10（重量锁）重量锁指针 | -                        |
+| 执行同步块               | 10（重量锁）重量锁指针 | -                        |
+| 执行同步块               | 10（重量锁）重量锁指针 | 访问同步块，获取 monitor |
+| 执行同步块               | 10（重量锁）重量锁指针 | 自旋重试                 |
+| 执行同步块               | 10（重量锁）重量锁指针 | 自旋重试                 |
+| 执行同步块               | 10（重量锁）重量锁指针 | 自旋重试                 |
+| 执行同步块               | 10（重量锁）重量锁指针 | 阻塞                     |
+| ...                      | ...                    | ...                      |
+
+- **自旋会占用 CPU 时间，单核 CPU 自旋就是浪费，多核 CPU 自旋才能发挥优势。** 
+- 在 Java 6 之后自旋锁是自适应的，比如对象刚刚的一次自旋操作成功过，那么认为这次自旋成功的可能性会 高，就多自旋几次；反之，就少自旋甚至不自旋，总之，比较智能。 
+- Java 7 之后不能控制是否开启自旋功能
+
+#### 偏向锁
+
+轻量级锁在没有竞争时（就自己这个线程），每次重入仍然需要执行 CAS 操作。 
+
+Java 6 中引入了偏向锁来做进一步优化：**只有第一次使用 CAS 将==线程 ID==设置到对象的 Mark Word 头**，之后发现 这个线程 ID 是自己的就表示没有竞争，不用重新 CAS。以后只要不发生竞争，这个对象就归该线程所有 
+
+例如：同一个线程对同一个对象反复加锁。
+
+```java
+static final Object obj = new Object();
+
+public static void m1(){
+    synchronize(obj){
+        m2();// 同步块A
+    }
+}
+
+public static void m2(){
+    synchronize(obj){
+        m3();// 同步块B
+    }
+}
+
+public static void m3(){
+    synchronize(obj){
+        // 同步块C
+    }
+}
+```
+
+CAS 底层对应的也是以 lock 打头的指令，也会影响一定的性能。
+
+<img src="..\pics\JavaStrengthen\juc\light_lock.png">
+
+<img src="..\pics\JavaStrengthen\juc\weight_lock.png">
+
+#### 偏向状态
+
+> 对象头格式
+
+<img src="..\pics\JavaStrengthen\juc\64_mark_word.png" style="float:left">
+
+- Normal 和 Biased 是通过 biased_lock 判断的
+
+- Lightweight locked 和 Heavyweight Locked 是通过 01、11 判断的
+- epoch 是通过批量重定向和批量撤销用的。
+
+一个对象创建时： 
+
+- 如果开启了偏向锁（默认开启），那么对象创建后，markword 值为 0x05 即最后 3 位为 101，这时它的 thread、epoch、age 都为 0 
+- 偏向锁是默认是延迟的，不会在程序启动时立即生效，如果想避免延迟，可以加 VM 参数 - XX:BiasedLockingStartupDelay=0 来禁用延迟 
+- 如果没有开启偏向锁，那么对象创建后，markword 值为 0x01 即最后 3 位为 001，这时它的 hashcode、 age 都为 0，第一次用到 hashcode 时才会赋值
+
+> 测试延迟特性
+
+利用 jol 第三方工具来查看对象头信息
+
+```xml
+<dependency>
+    <groupId>org.openjdk.jol</groupId>
+    <artifactId>jol-core</artifactId>
+    <version>0.14</version>
+</dependency>
+```
+
+```java
+import lombok.extern.slf4j.Slf4j;
+import org.openjdk.jol.info.ClassLayout;
+
+import java.io.IOException;
+
+class Dog {
+}
+
+@Slf4j(topic = "c.TestBiased")
+public class TestBiased {
+    // 添加虚拟机参数 -XX:BiasedLockingStartupDelay=0
+    public static void main(String[] args) throws IOException {
+        Dog d = new Dog();
+        ClassLayout classLayout = ClassLayout.parseInstance(d);
+        new Thread(() -> {
+            log.debug("synchronized 前");
+            log.debug(classLayout.parseInstance(d).toPrintable());
+            synchronized (d) {
+                log.debug("synchronized 中");
+                log.debug(classLayout.parseInstance(d).toPrintable());
+            }
+            log.debug("synchronized 后");
+            log.debug(classLayout.parseInstance(d).toPrintable());
+
+        }, "t1").start();
+    }
+}
+```
+
+输出
+
+````shell
+asfs
+````
+
+**注意** 处于偏向锁的对象解锁后，线程 id 仍存储于对象头中。
+
+> 测试禁用
+
+在上面测试代码运行时在添加 VM 参数 -XX:-UseBiasedLocking 禁用偏向锁。输出：
+
+```shell
+123
+```
+
+> 测试 hashCode
+
+正常状态对象一开始是没有 hashCode 的，第一次调用才生成
+
+##### 撤销-调用对象 hashCode
+
+调用了对象的 hashCode，但偏向锁的对象 MarkWord 中存储的是线程 id，如果调用 hashCode 会导致偏向锁被撤销 
+
+- 轻量级锁会在锁记录中记录 hashCode 
+- 重量级锁会在 Monitor 中记录 hashCode 
+
+在调用 hashCode 后使用偏向锁，记得去掉 -XX:-UseBiasedLocking
+
+输出
+
+```shell
+adf
+```
+
+##### 撤销-其他线程使用对象
+
+当有其它线程使用偏向锁对象时，会将偏向锁升级为轻量级锁
+
+```java
+private static void test2() throws InterruptedException {
+ Dog d = new Dog();
+ Thread t1 = new Thread(() -> {
+ synchronized (d) {
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ }
+ synchronized (TestBiased.class) {
+ TestBiased.class.notify();
+ }
+ // 如果不用 wait/notify 使用 join 必须打开下面的注释
+ // 因为：t1 线程不能结束，否则底层线程可能被 jvm 重用作为 t2 线程，底层线程 id 是一样的
+ /*try {
+ System.in.read();
+ } catch (IOException e) {
+ e.printStackTrace();
+ }*/
+ }, "t1");
+ t1.start();
+ Thread t2 = new Thread(() -> {
+ synchronized (TestBiased.class) {
+ try {
+ TestBiased.class.wait();
+ } catch (InterruptedException e) {
+ e.printStackTrace();
+ }
+ }
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ synchronized (d) {
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ }
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ }, "t2");
+ t2.start();
+}
+```
+
+输出
+
+```shell
+[t1] - 00000000 00000000 00000000 00000000 00011111 01000001 00010000 00000101 
+[t2] - 00000000 00000000 00000000 00000000 00011111 01000001 00010000 00000101 
+[t2] - 00000000 00000000 00000000 00000000 00011111 10110101 11110000 01000000 
+[t2] - 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000001 
+```
+
+
+
+##### 撤销-调用 wait/notify
+
+```java
+public static void main(String[] args) throws InterruptedException {
+ Dog d = new Dog();
+ Thread t1 = new Thread(() -> {
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ synchronized (d) {
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ try {
+ d.wait();
+ } catch (InterruptedException e) {
+ e.printStackTrace();
+ }
+ log.debug(ClassLayout.parseInstance(d).toPrintableSimple(true));
+ }
+ }, "t1");
+ t1.start();
+ new Thread(() -> {
+ try {
+ Thread.sleep(6000);
+ } catch (InterruptedException e) {
+ e.printStackTrace();
+ }
+ synchronized (d) {
+ log.debug("notify");
+ d.notify();
+ }
+ }, "t2").start();
+}
+```
+
+输出
+
+```shell
+[t1] - 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000101 
+[t1] - 00000000 00000000 00000000 00000000 00011111 10110011 11111000 00000101 
+[t2] - notify 
+[t1] - 00000000 00000000 00000000 00000000 00011100 11010100 00001101 11001010 
+```
+
+
+
+
+
+##### 批量重偏向
+
+##### 批量撤销
+
+#### 锁消除
+
 # 线程通信
+
+
 
 线程通信的方式有如下几种
 
